// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaGroup should render correctly 1`] = `
<DocumentFragment>
  <div
    class="is-valid m-form__group"
  >
    <textarea
      aria-required="true"
      class="m-form__control--textarea is-pristine"
      cols="50"
      id="textarea-group"
      name="textarea"
      placeholder=""
      required=""
      rows="4"
    >
      2
    </textarea>
    <label
      class="m-form__label"
      for="textarea-group"
    >
      textarea
      <i
        aria-hidden="true"
        class="c-font-icon--sad m-form__label__icon--error"
      />
      <i
        aria-hidden="true"
        class="c-font-icon--smile m-form__label__icon--success"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`TextareaGroup should render correctly with defaults 1`] = `
<DocumentFragment>
  <div
    class="m-form__group"
  >
    <textarea
      class="m-form__control--textarea"
      cols="50"
      id="input"
      name="input"
      placeholder=""
      rows="4"
    />
    <label
      class="m-form__label"
      for="input"
    >
      <i
        aria-hidden="true"
        class="c-font-icon--sad m-form__label__icon--error"
      />
      <i
        aria-hidden="true"
        class="c-font-icon--smile m-form__label__icon--success"
      />
    </label>
  </div>
</DocumentFragment>
`;
